# ChatApp

./: README.md  pyproject.toml
chat/: admin.py  models.py  serializer.py  urls.py  views.py
chat/migrations/: 0001_initial.py
main/: settings.py  urls.py
